reformatting, automated remaining entities base pass